force-app/main/default/objects/OI_TD_Settings__c/OI_TD_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>OI TD Settings</label>
    <description
  >Org-level Tech Debt scan schedule (frequency and next run).</description>
</CustomObject>