force-app/main/default/objects/OI_TD_Settings__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Text</type>
    <length>20</length>
</CustomField>