force-app/main/default/objects/OI_TD_Settings__c/fields/Next_Scan_At__c.field-meta.xml
<CustomField>
    <fullName>Next_Scan_At__c</fullName>
    <label>Next Scan At</label>
    <type>DateTime</type>
</CustomField>